<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_weight="1"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_centerInParent="true"
            android:layout_gravity="center_horizontal"
            android:alpha="0"
            android:background="@drawable/logo_vcc" />



        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/progressBar1"
            android:gravity="center"
            android:text="@string/app_name_extension"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/colorPrimary" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:background="@color/colorPrimary"
        android:gravity="center_vertical"
        android:orientation="vertical">



        <com.github.ybq.android.spinkit.SpinKitView
            android:id="@+id/spin_kit"
            style="@style/SpinKitView.Large.ThreeBounce"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="60dp"
            app:SpinKit_Color="@color/white" />



        <TextView
            android:id="@+id/textprgrs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/progressBar1"
            android:gravity="center"
            android:text="@string/loading"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/white" />


        <View
            android:layout_width="match_parent"
            android:background="@color/white"
            android:layout_marginRight="35dp"
            android:layout_marginLeft="35dp"
            android:layout_marginTop="45dp"
            android:layout_height="2dp" />



        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:background="@color/colorPrimary"
            android:gravity="center_horizontal|center_vertical"
            android:padding="15dp"
            android:text="@string/txt_footer"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/white"
            android:textSize="15sp"
     />

    </LinearLayout>


</LinearLayout>